--- a/app/_includes/landing-hero.html
+++ b/app/_includes/landing-hero.html
@@ -3,14 +3,14 @@
 <section id="hero">
   <div id="owl-main" class="owl-carousel owl-one-item">
 
-    <div class="item img-bg-center" style="background-image: url(/images/header-bg.jpg);">
+    <div class="item img-bg-center">
       <div class="container">
         <div class="caption vertical-center text-center">
 
-          <h1 class="fadeInDown-1 light-color">Made for Designers</h1>
-          <p class="fadeInDown-2 light-color">Create your online portfolio in minutes with the professionally and lovingly designed REEN website template. Customize your site with versatile and easy to use features.</p>
+          <h1 class="fadeInDown-1 light-color">Made To Last</h1>
+          <p class="fadeInDown-2 light-color">For 90 years, Cincinnati Mine Machinery Company has been the industry leader in quality and durable mining equipment.</p>
           <div class="fadeInDown-3">
-            <a href="#" class="btn btn-large">Get started now</a>
+            <a href="/products" class="btn btn-large">View our products</a>
           </div><!-- /.fadeIn -->
 
         </div><!-- /.caption -->
