--- a/app/_includes/landing-services.html
+++ b/app/_includes/landing-services.html
@@ -1,37 +1,53 @@
-<!-- Services Section -->
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+<!-- ============================================================= SECTION – WHO WE ARE ============================================================= -->
+
+<section id="who-we-are">
+  <div class="container inner-top inner-bottom-sm">
+
+    <div class="row">
+      <div class="col-md-8 col-sm-9 center-block text-center">
+        <header>
+          <h1>90 years proven.</h1>
+          <p>Cincinnati Mine Machinery Company is a high-quality solution for those who want durable mining equipment that doesn't break down like the other guys. We pride ourselves on providing the highest quality machinery - we have perfected this art over the last 90 years.</p>
+        </header>
+      </div><!-- /.col -->
+    </div><!-- /.row -->
+
+    <div class="row inner-top-sm">
+
+      <div class="col-md-1">
+        <div class="icon pull-right">
+          <i class="icon-star-empty-1 icn"></i>
+        </div><!-- /.icon -->
+      </div><!-- /.col -->
+
+      <div class="col-md-3 inner-bottom-xs">
+        <h2>Quality</h2>
+        <p class="text-small">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+      </div><!-- /.col -->
+
+      <div class="col-md-1">
+        <div class="icon pull-right">
+          <i class="icon-tools icn"></i>
+        </div><!-- /.icon -->
+      </div><!-- /.col -->
+
+      <div class="col-md-3 inner-bottom-xs">
+        <h2>Durable</h2>
+        <p class="text-small">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+      </div><!-- /.col -->
+
+      <div class="col-md-1">
+        <div class="icon pull-right">
+          <i class="icon-award icn"></i>
+        </div><!-- /.icon -->
+      </div><!-- /.col -->
+
+      <div class="col-md-3 inner-bottom-xs">
+        <h2>Proven</h2>
+        <p class="text-small">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+      </div><!-- /.col -->
+
+    </div><!-- /.row -->
+
+  </div><!-- /.container -->
+</section>
