--- a/app/styles/page/_homepage.scss
+++ b/app/styles/page/_homepage.scss
@@ -1,58 +1,4 @@
 .homepage {
-  header {
-    text-align: center;
-    color: #fff;
-    background-attachment: scroll;
-    background-image: url(/images/landing-hero-bg.jpg);
-    background-position: center center;
-    background-repeat: none;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    .intro-text {
-      padding-top: 100px;
-      padding-bottom: 50px;
-      .intro-lead-in {
-        margin-bottom: 25px;
-        font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 22px;
-        font-style: italic;
-        line-height: 22px;
-      }
-      .intro-heading {
-        margin-bottom: 25px;
-        text-transform: uppercase;
-        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 50px;
-        font-weight: 700;
-        line-height: 50px;
-      }
-    }
-  }
-
-  @media (min-width: 768px) {
-    header .intro-text {
-      padding-top: 300px;
-      padding-bottom: 200px;
-      .intro-lead-in {
-        margin-bottom: 25px;
-        font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 40px;
-        font-style: italic;
-        line-height: 40px;
-      }
-      .intro-heading {
-        margin-bottom: 50px;
-        text-transform: uppercase;
-        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 75px;
-        font-weight: 700;
-        line-height: 75px;
-      }
-    }
-  }
-
   .img-bg-center {
     background-image: url(/images/landing-hero-bg.jpg);
     position: relative;
@@ -70,5 +16,11 @@
 
   #hero .btn-large {
     font-weight: bold;
+  }
+
+  #who-we-are {
+    .icon i.icn {
+      color: #117156;
+    }
   }
 }
