clean up scripts (including fixing the header scroll animation) and add count up script

--- a/app/_includes/landing-services.html
+++ b/app/_includes/landing-services.html
@@ -7,47 +7,36 @@
       <div class="col-md-8 col-sm-9 center-block text-center">
         <header>
           <h1>90 years proven.</h1>
-          <p>Cincinnati Mine Machinery Company is a high-quality solution for those who want durable mining equipment that doesn't break down like the other guys. We pride ourselves on providing the highest quality machinery - we have perfected this art over the last 90 years.</p>
+          <p class="text-small">Cincinnati Mine Machinery Company is a high-quality solution for those who want durable mining equipment that doesn't break down like the other guys. We pride ourselves on providing the highest quality machinery - we have perfected this art over the last 90 years.</p>
         </header>
       </div><!-- /.col -->
     </div><!-- /.row -->
 
-    <div class="row inner-top-sm">
+    <div class="row inner-top-sm text-center">
 
-      <div class="col-md-1">
-        <div class="icon pull-right">
+      <div class="col-sm-4 inner-bottom-xs">
+        <div class="icon">
           <i class="icon-star-empty-1 icn"></i>
         </div><!-- /.icon -->
-      </div><!-- /.col -->
-
-      <div class="col-md-3 inner-bottom-xs">
         <h2>Quality</h2>
         <p class="text-small">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
       </div><!-- /.col -->
 
-      <div class="col-md-1">
-        <div class="icon pull-right">
+      <div class="col-sm-4 inner-bottom-xs">
+        <div class="icon">
           <i class="icon-tools icn"></i>
         </div><!-- /.icon -->
-      </div><!-- /.col -->
-
-      <div class="col-md-3 inner-bottom-xs">
         <h2>Durable</h2>
         <p class="text-small">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
       </div><!-- /.col -->
 
-      <div class="col-md-1">
-        <div class="icon pull-right">
+      <div class="col-sm-4 inner-bottom-xs">
+        <div class="icon">
           <i class="icon-award icn"></i>
         </div><!-- /.icon -->
-      </div><!-- /.col -->
-
-      <div class="col-md-3 inner-bottom-xs">
         <h2>Proven</h2>
         <p class="text-small">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
       </div><!-- /.col -->
-
     </div><!-- /.row -->
-
   </div><!-- /.container -->
 </section>
