--- a/app/_includes/shared/header.html
+++ b/app/_includes/shared/header.html
@@ -18,12 +18,12 @@
     </div><!-- /.navbar-header -->
 
     <div class="yamm">
-      <div class="navbar-collapse collapse">
+      <div class="navbar-collapse collapse" data-0="padding-top: 30px;padding-bottom: 30px;-webkit-box-shadow: 0 10px 10px rgba(0,0,0,0);   -moz-box-shadow: 0 10px 10px rgba(0,0,0,0.0);box-shadow: 0 10px 10px rgba(0,0,0,0);" data-300="padding-top: 0;padding-bottom: 0;-webkit-box-shadow: 0 10px 10px rgba(0,0,0,0.1);   -moz-box-shadow: 0 10px 10px rgba(0,0,0,0.1);box-shadow: 0 10px 10px rgba(0,0,0,0.1);">
         <div class="container">
 
           <!-- ============================================================= LOGO ============================================================= -->
 
-          <a class="navbar-brand" href="index.html"><img src="/images/logo.svg" class="logo" alt=""></a>
+          <a class="navbar-brand" href="index.html"><img src="/images/logo.svg" class="logo" alt="Cincinnati Mine Machinery Co." data-0="max-height: 50px;" data-300="max-height: 35px;"></a>
 
           <!-- ============================================================= LOGO : END ============================================================= -->
 
