--- a/app/_includes/shared/scripts.html
+++ b/app/_includes/shared/scripts.html
@@ -10,16 +10,17 @@
 <script src="/js/jquery.validate.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/bootstrap-hover-dropdown.min.js"></script>
-<script src="/js/skrollr.min.js"></script>
-<script src="/js/skrollr.stylesheets.min.js"></script>
+<script src="/js/animateNumber.js"></script>
+<script src="/js/countup.js"></script>
 <script src="/js/waypoints.min.js"></script>
 <script src="/js/waypoints-sticky.min.js"></script>
 <script src="/js/owl.carousel.min.js"></script>
 <script src="/js/jquery.isotope.min.js"></script>
 <script src="/js/jquery.easytabs.min.js"></script>
-<script src="/js/google.maps.api.v3.js"></script>
-<script src="/js/viewport-units-buggyfill.js"></script>
-<script src="/js/scripts.js"></script>
+<script src="/js/skrollr.min.js"></script>
+<script src="/js/skrollr.stylesheets.min.js"></script>
+<!-- <script src="/js/google.maps.api.v3.js"></script>
+ --><script src="/js/viewport-units-buggyfill.js"></script>
 <!-- endbuild -->
 
 
