--- a/app/styles/base/_application.scss
+++ b/app/styles/base/_application.scss
@@ -22,10 +22,7 @@
  * ---------------------------------------------------------------------------
  */
 
-.header-primary {}
-
-.nav-primary {}
-
-.content-primary {}
-
-.footer-primary {}
+#get-started .btn-green{
+  margin-top: 0;
+  padding: 12px 24px;
+}
