--- a/app/styles/reen/main.css
+++ b/app/styles/reen/main.css
@@ -834,7 +834,7 @@ iframe + iframe {
     color: #FFF;
 }
 .tint-bg {
-    background-color: #9c954a;
+  background-color: #117156;
 	color: #FFF;
 	padding: 2px 8px;
 	margin-top: -2px;
