--- a/app/_includes/shared/footer.html
+++ b/app/_includes/shared/footer.html
@@ -1,1 +1,12 @@
-<footer id="footer-primary" class="footer-primary"></footer>
+<!-- ============================================================= FOOTER ============================================================= -->
+<footer id="footer-primary" class="footer-primary dark-bg">
+  <div class="footer-bottom">
+    <div class="container inner">
+      <p class="pull-left">© 2015 Cincinnati Mine Machinery Co. All rights reserved.</p>
+      <ul class="footer-menu pull-right">
+        <li><a href="tos.html">Terms of Service</a></li>
+        <li><a href="pp.html">Privacy Policy</a></li>
+      </ul><!-- .footer-menu -->
+    </div><!-- .container -->
+  </div><!-- .footer-bottom -->
+</footer>
