--- a/app/_includes/shared/header.html
+++ b/app/_includes/shared/header.html
@@ -33,7 +33,7 @@
           <ul class="nav navbar-nav">
 
             <li class="dropdown">
-              <a href="/about">Products</a>
+              <a href="/products">Products</a>
             </li><!-- /.dropdown -->
 
             <li class="dropdown">
