add products detail page

--- a/app/styles/reen/main.css
+++ b/app/styles/reen/main.css
@@ -2461,12 +2461,14 @@ blockquote:before {
     opacity: 0;
     height: 100%;
     position: absolute;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 	left: 0;
 	top: 0;
     text-decoration: none;
     width: 100%;
     z-index: 100;
-    background-color: rgba(26,187,156, 0.9);
+    background-color: rgba(17, 113, 86, 0.9);
     -webkit-transition: all 200ms ease-out;
     -o-transition: all 200ms ease-out;
     -moz-transition: all 200ms ease-out;
@@ -2539,7 +2541,10 @@ blockquote:before {
 	content: "\f464";
 }
 .item-details li.url:before {
-	content: "\f30e";
+  content: "\f30e";
+}
+.item-details li.download-pdf:before {
+  content: "\f4e5";
 }
 .text-center .item-details li {
 	display: inline-block;
