fix scroll bugs

--- a/app/_includes/shared/scripts.html
+++ b/app/_includes/shared/scripts.html
@@ -17,6 +17,7 @@
 <script src="/js/owl.carousel.min.js"></script>
 <script src="/js/jquery.isotope.min.js"></script>
 <script src="/js/jquery.easytabs.min.js"></script>
+<script src="/js/jquery.scrollUp.js"></script>
 <script src="/js/skrollr.min.js"></script>
 <script src="/js/skrollr.stylesheets.min.js"></script>
 <!-- <script src="/js/google.maps.api.v3.js"></script>
