--- a/app/styles/screen.scss
+++ b/app/styles/screen.scss
@@ -65,4 +65,5 @@
 /* Pages
  * -----------------------------------------------------------------------------*/
 @import "page/homepage";
+@import "page/suppliers";
 @import "page/about";
