update suppliers page with map

--- a/app/_includes/suppliers-list.html
+++ b/app/_includes/suppliers-list.html
@@ -1,7 +1,7 @@
 <!-- ============================================================= SECTION – WHO WE ARE ============================================================= -->
 
 <section id="who-we-are">
-  <div class="container inner-md">
+  <div class="container">
     <div class="row inner-top-xs">
 
       <div class="col-xs-12 col-sm-6 col-md-4 inner-bottom-xs">
