--- a/app/_includes/shared/scripts.html
+++ b/app/_includes/shared/scripts.html
@@ -20,8 +20,8 @@
 <script src="/js/jquery.scrollUp.js"></script>
 <script src="/js/skrollr.min.js"></script>
 <script src="/js/skrollr.stylesheets.min.js"></script>
-<!-- <script src="/js/google.maps.api.v3.js"></script>
- --><script src="/js/viewport-units-buggyfill.js"></script>
+<script src="/js/google.maps.api.v3.js"></script>
+<script src="/js/viewport-units-buggyfill.js"></script>
 <!-- endbuild -->
 
 
