add about page/timeline

--- a/app/_includes/shared/header.html
+++ b/app/_includes/shared/header.html
@@ -8,7 +8,7 @@
 
         <!-- ============================================================= LOGO MOBILE ============================================================= -->
 
-        <a class="navbar-brand" href="index.html"><img src="/images/logo.svg" class="logo" alt=""></a>
+        <a class="navbar-brand" href="/"><img src="/images/logo.svg" class="logo" alt=""></a>
 
         <!-- ============================================================= LOGO MOBILE : END ============================================================= -->
 
@@ -23,7 +23,7 @@
 
           <!-- ============================================================= LOGO ============================================================= -->
 
-          <a class="navbar-brand" href="index.html"><img src="/images/logo.svg" class="logo" alt="Cincinnati Mine Machinery Co." data-0="max-height: 50px;" data-300="max-height: 35px;"></a>
+          <a class="navbar-brand" href="/"><img src="/images/logo.svg" class="logo" alt="Cincinnati Mine Machinery Co." data-0="max-height: 50px;" data-300="max-height: 35px;"></a>
 
           <!-- ============================================================= LOGO : END ============================================================= -->
 
