--- a/app/_includes/timeline.html
+++ b/app/_includes/timeline.html
@@ -1,76 +1,155 @@
 <!-- About Section -->
-<section id="about">
+<section class="light-bg">
     <div class="container">
-        <!-- <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">About</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-            </div>
-        </div> -->
         <div class="row">
             <div class="col-lg-12">
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="/img/about/1.jpg" alt="">
+                            <img class="img-circle img-responsive" src="/images/history/timeline-1.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                              <h3>The Early Years</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted text-small">The Cincinnati Mine Machinery Company (CMM) was founded in the early 1920's and bought by Edwin P. Stenger in 1924. It shared a facility with Cincinnati Shaper Company and Lodge and Shipley, two prominent members of the regions burgeoning machine tool industry.</p>
+
+                                <p class="text-muted text-small">In October 1928, Armin O. Bruestle, a graduate of the University of Cincinnati, College of Engineering, joined the company. He and Edwin Stenger worked together for over 40 years, establishing the principles and ethics which the company and its employees live and work by today. Armin retired in 1993 after 65 years with the company.</p>
+
+                                <p class="text-muted text-small">In the early 30's Cutter Chains were CMM's sole focus. A forged block and connector distinguished the product from the cast and fabricated alternatives available elsewhere and went a long way toward earning for CMM a reputation for quality and durability that continues to be its hallmark.</p>
+
+                                <p class="text-muted text-small">Shortly thereafter, CMM manufactured the first Cutter Bar from hammered stock. The company also began making sprockets from alloy steel, rather than castings, establishing a new benchmark for strength and durability.</p>
                             </div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="/img/about/2.jpg" alt="">
+                            <img class="img-circle img-responsive" src="/images/history/timeline-2.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                              <h3>The Thirties</h3>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted text-small">Sales efforts were expanding quickly and included the Eastern and Western U.S. and Canada. CMM's reputation as a quality chain manufacturer continued to grow, and in 1938 CMM developed and patented the Duplex Chain, which became the company's dominant product throughout the 1940's.</p>
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="/img/about/3.jpg" alt="">
+                            <img class="img-circle img-responsive" src="/images/history/timeline-3.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>December 2012</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
+                              <h3>The War Years</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted text-small">During WWII, the company was selected by the U.S. Army to manufacture Tank Track pins. CMM received the prestigious “E” award for excellence in service to the country. Only 2% of the companies involved in manufacturing for the war effort achieved this honor. The “E” flag, which is replicated and displayed on our shop wall, remains a valued reminder of our proud history.</p>
                             </div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="/img/about/4.jpg" alt="">
+                            <img class="img-circle img-responsive" src="/images/history/timeline-4.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>July 2014</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
+                              <h3>Post-war Fifties</h3>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted text-small">The early 1950’s brought the development of the Rap-Lok continuous miner which had five or six chains running over the machine head. The 125 and 405 type chains incorporated the Rap-Lok and each merited a patent of its own.</p>
+
+                                 <p class="text-muted text-small">By the mid-50’s, the company was selling more than 12,000,000 bits per year for this chain. Each month, 120 tons of steel rods were cut to specifications using machines designed by CMM.Significant product innovations included the 414 trim chains for use on boring machines.</p>
+
+                                 <p class="text-muted text-small">Our innovative conveyor chain design was first tested at the Duquesne Light Company coal mine. This chain, which incorporated the universal connector developed and patented by CMM, continues to be widely recognized as the strongest chain available.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="/images/history/timeline-5.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                              <h3>The Sixties</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted text-small">The Quik-Pik bit lug, which incorporated the point attack bit, was developed and patented by CMM in 1960. More than three decades later, we continue to offer this versatile, high-performing product.</p>
                             </div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <h4>Be Part
-                                <br>Of Our
-                                <br>Story!</h4>
+                            <img class="img-circle img-responsive" src="/images/history/timeline-6.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                              <h3>The Seventies</h3>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted text-small">Innovative and patented designs were introduced in rapid-fire succession during the 1970’s. Robert Stenger, the company’s current President and grandson of Edwin P. Stenger, joined CMM in 1972. Shortly thereafter, Ron Paolello and Tim Jent, our current General Manager and Manufacturing Manager, came onboard. During this period, projects such as the 814 Ripperveyor chain, for the JOY 11CM miner, and the 734 chain, for the Jeffrey Heliminer 120-H machine, were developed.</p>
+
+                                <p class="text-muted text-small">These two chains, in particular, represented significant advancements, both for CMM and the miners, who immediately achieved higher productivity and longer service life.</p>
+
+                                <p class="text-muted text-small">Within this same time period, the Pin-On bit lug was developed and patented. This product represented no less than a revolution for the coal industry because it allowed the fast and straightforward replacement of the bit holder to the exact bit location without the need to burn off the existing lug and weld a new one in place.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="/images/history/timeline-7.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                              <h3>The Eighties</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted text-small">In the early 80’s, a multi-national company based in the Netherlands enlisted our assistance in the development of a front end for their high wall miner. The chain for this machine is a derivative of our 734 trim chain; it continues to be sold widely throughout the mining industry today.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="/images/history/timeline-8.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                              <h3>The Nineties</h3>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted text-small">The patented Cone-Tite holder, with the holding device at the rear of the lug, was also developed during this time. This impacted the coal industry dramatically, as most bit holders in use today are a variation of this important and innovative design. Shortly thereafter, CMM brought to market the Cone-Lok, an advanced version of the Cone-Tite bit lug and base combination.</p>
+
+                                <p class="text-muted text-small">With the addition of William Stenger, Treasurer and Randy Morris, Chief Engineer, we enhanced our current senior staff.</p>
+
+                                <p class="text-muted text-small">In 1999, after enjoying more than 60 years of business in South Africa, we opened our own office and distribution facility in Witbank South Africa. In 2002, we opened a warehouse in Chapmanville, WV, to better service our customers in that area. This added to the other warehouses spread throughout the U.S., Canada, Australia, Mexico and Europe.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="/images/history/timeline-9.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                              <h3>Today</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted text-small">Today the innovative spirit continues at CMM. We have developed a conveyor chain for the High Wall miners, crawler chains for a variety of continuous miners, a tramming-conveying chain for continuous haulage systems, quick change foot shaft and stub shaft assemblies, and a new patented bit lug.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="/images/history/timeline-10.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                              <h3>The Future</h3>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted text-small">Cincinnati Mine Machinery Company has been admired and respected as an innovative, quality-driven company that could meet the challenges of the day. Today, that reputation continues to serve us well as we strive to maintain leadership in what is certainly a challenging competitive climate. In addition to North America, the U.K., Australia and South Africa, our service area now includes the growing areas of South America and Europe.</p>
+                            </div>
                         </div>
                     </li>
                 </ul>
