--- a/app/styles/page/_about.scss
+++ b/app/styles/page/_about.scss
@@ -1,6 +1,23 @@
+.about {
+
+  #hero {
+    background: url('/images/about-hero.jpg') no-repeat center;
+    background-size: cover;
+
+    @include media($medium-screen-up) {
+      background-position: center -120px !important;
+    }
+  }
+
+  h1 span {
+    @include media($medium-screen-up) {
+      display: block;
+    }
+  }
+}
 .timeline {
   position: relative;
-  padding: 0;
+  padding: 100px 0;
   list-style: none;
   &:before {
     content: "";
@@ -10,7 +27,7 @@
     left: 40px;
     width: 2px;
     margin-left: -1.5px;
-    background-color: #f1f1f1;
+    background-color: lighten($light-gray, 7);;
   }
   > li {
     position: relative;
@@ -29,7 +46,7 @@
       float: right;
       position: relative;
       width: 100%;
-      padding: 0 20px 0 100px;
+      padding: 0 0 20px 100px;
       text-align: left;
       &:before {
         right: auto;
@@ -51,12 +68,12 @@
       width: 80px;
       height: 80px;
       margin-left: 0;
-      border: 7px solid #f1f1f1;
+      border: 7px solid lighten($light-gray, 2);;
       border-radius: 100%;
       text-align: center;
       color: #fff;
-      background-color: #fed136;
-      h4 {
+      background-color: #117156;
+      h3 {
         margin-top: 12px;
         font-size: 10px;
         line-height: 14px;
@@ -64,7 +81,7 @@
     }
     &.timeline-inverted > .timeline-panel {
       float: right;
-      padding: 0 20px 0 100px;
+      padding: 0 0 20px 100px;
       text-align: left;
       &:before {
         right: auto;
@@ -83,7 +100,7 @@
       margin-bottom: 0;
     }
   }
-  .timeline-heading h4 {
+  .timeline-heading h3 {
     margin-top: 0;
     color: inherit;
     &.subheading {
@@ -91,7 +108,7 @@
     }
   }
   .timeline-body > {
-    p, ul {
+    ul {
       margin-bottom: 0;
     }
   }
@@ -107,8 +124,8 @@
       min-height: 100px;
       .timeline-panel {
         float: left;
+        padding: 0 20px 20px 0;
         width: 41%;
-        padding: 0 20px 20px 30px;
         text-align: right;
       }
       .timeline-image {
@@ -116,7 +133,7 @@
         width: 100px;
         height: 100px;
         margin-left: -50px;
-        h4 {
+        h3 {
           margin-top: 16px;
           font-size: 13px;
           line-height: 18px;
@@ -124,7 +141,7 @@
       }
       &.timeline-inverted > .timeline-panel {
         float: right;
-        padding: 0 30px 20px 20px;
+        padding: 0 0 20px 20px;
         text-align: left;
       }
     }
@@ -134,21 +151,15 @@
 @media (min-width: 992px) {
   .timeline > li {
     min-height: 150px;
-    .timeline-panel {
-      padding: 0 20px 20px;
-    }
     .timeline-image {
       width: 150px;
       height: 150px;
       margin-left: -75px;
-      h4 {
+      h3 {
         margin-top: 30px;
         font-size: 18px;
         line-height: 26px;
       }
-    }
-    &.timeline-inverted > .timeline-panel {
-      padding: 0 20px 20px;
     }
   }
 }
@@ -156,19 +167,13 @@
 @media (min-width: 1200px) {
   .timeline > li {
     min-height: 170px;
-    .timeline-panel {
-      padding: 0 20px 20px 100px;
-    }
     .timeline-image {
       width: 170px;
       height: 170px;
       margin-left: -85px;
-      h4 {
+      h3 {
         margin-top: 40px;
       }
-    }
-    &.timeline-inverted > .timeline-panel {
-      padding: 0 100px 20px 20px;
     }
   }
 }
