add contact page

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -13,6 +13,7 @@ $base-border-radius: em(3);
 
 // Colors
 $blue: #477DCA;
+$green: #117156;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #DDD;
