--- a/app/styles/base/_buttons.scss
+++ b/app/styles/base/_buttons.scss
@@ -44,12 +44,12 @@ input[type="submit"] {
   -moz-box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.15);
 
-  .btn-small {
+  &.btn-small {
     padding: 5px 13px 6px;
     font-size: 13px;
   }
 
-  .btn-large {
+  &.btn-large {
     padding: 14px 26px 16px;
     font-size: 15px;
   }
