--- a/app/_includes/shared/footer.html
+++ b/app/_includes/shared/footer.html
@@ -4,8 +4,8 @@
     <div class="container inner">
       <p class="pull-left">© 2015 Cincinnati Mine Machinery Co. All rights reserved.</p>
       <ul class="footer-menu pull-right">
-        <li><a href="tos.html">Terms of Service</a></li>
-        <li><a href="pp.html">Privacy Policy</a></li>
+        <li><a href="/terms-and-conditions">Terms and Conditions</a></li>
+        <li><a href="/privacy-policy">Privacy Policy</a></li>
       </ul><!-- .footer-menu -->
     </div><!-- .container -->
   </div><!-- .footer-bottom -->
