--- a/app/_includes/shared/scripts.html
+++ b/app/_includes/shared/scripts.html
@@ -1,27 +1,78 @@
-<!-- build:js({app,.tmp}) /scripts/app.js -->
+<!-- build:js({app,.tmp}) /scripts/jquery.js -->
 <script src="/vendor/jquery/dist/jquery.js"></script>
-<script src="/scripts/app.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/jquery.js -->
+<script src="/js/jquery.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/bootstrap.js -->
+<script src="/js/bootstrap.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/bootstrap-dropdown.js -->
+<script src="/js/bootstrap-hover-dropdown.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/jquery-easing.js -->
+<script src="/js/jquery.easing.1.3.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/jquery-form.js -->
+<script src="/js/jquery.form.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/jquery-validate.js -->
+<script src="/js/jquery.validate.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/isotope.js -->
+<script src="/js/jquery.isotope.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/easy-tabs.js -->
+<script src="/js/jquery.easytabs.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/scrollup.js -->
+<script src="/js/jquery.scrollUp.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/skrollr.js -->
+<script src="/js/skrollr.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/skrollr-stylesheets.js -->
+<script src="/js/skrollr.stylesheets.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/waypoints.js -->
+<script src="/js/waypoints.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/waypoints-sticky.js -->
+<script src="/js/waypoints-sticky.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/owl.js -->
+<script src="/js/owl.carousel.min.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/google-maps.js -->
+<script src="/js/google.maps.api.v3.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/buggyfill.js -->
+<script src="/js/viewport-units-buggyfill.js"></script>
 <!-- endbuild -->
 
 <!-- build:js({app,.tmp}) /scripts/base.js -->
-<script src="/js/jquery.min.js"></script>
-<script src="/js/jquery.easing.1.3.min.js"></script>
-<script src="/js/jquery.form.js"></script>
-<script src="/js/jquery.validate.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/bootstrap-hover-dropdown.min.js"></script>
 <script src="/js/animateNumber.js"></script>
 <script src="/js/countup.js"></script>
-<script src="/js/waypoints.min.js"></script>
-<script src="/js/waypoints-sticky.min.js"></script>
-<script src="/js/owl.carousel.min.js"></script>
-<script src="/js/jquery.isotope.min.js"></script>
-<script src="/js/jquery.easytabs.min.js"></script>
-<script src="/js/jquery.scrollUp.js"></script>
-<script src="/js/skrollr.min.js"></script>
-<script src="/js/skrollr.stylesheets.min.js"></script>
-<script src="/js/google.maps.api.v3.js"></script>
-<script src="/js/viewport-units-buggyfill.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) /scripts/app.js -->
+<script src="/scripts/app.js"></script>
 <!-- endbuild -->
 
 
