update copy on landing page

--- a/app/_includes/landing-stats.html
+++ b/app/_includes/landing-stats.html
@@ -16,28 +16,28 @@
         <div id="owl-videos" class="owl-carousel owl-outer-nav owl-ui-md owl-item-gap">
 
           <div class="item">
-            <p class="count">93</p>
-            <p class="count-label">description</p>
+            <p class="count">90</p>
+            <p class="count-label">years in business</p>
           </div><!-- /.item -->
 
           <div class="item">
-            <p class="count">87</p>
-            <p class="count-label">description</p>
+            <p class="count">4</p>
+            <p class="count-label">generations</p>
           </div><!-- /.item -->
 
           <div class="item">
-            <p class="count">14</p>
-            <p class="count-label">description</p>
+            <p class="count">30</p>
+            <p class="count-label">products</p>
           </div><!-- /.item -->
 
           <div class="item">
-            <p class="count">32</p>
-            <p class="count-label">description</p>
+            <p class="count">26</p>
+            <p class="count-label">employees</p>
           </div><!-- /.item -->
 
           <div class="item">
-            <p class="count">108</p>
-            <p class="count-label">description</p>
+            <p class="count">13</p>
+            <p class="count-label">suppliers</p>
           </div><!-- /.item -->
 
         </div><!-- /.owl-carousel -->
