--- a/app/_includes/landing-services.html
+++ b/app/_includes/landing-services.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-md-8 col-sm-9 center-block text-center">
         <header>
-          <h1>90 years proven.</h1>
+          <h1>The strongest link.</h1>
           <p class="text-small">Cincinnati Mine Machinery Company is a high-quality solution for those who want durable mining equipment that doesn't break down like the other guys. We pride ourselves on providing the highest quality machinery - we have perfected this art over the last 90 years.</p>
         </header>
       </div><!-- /.col -->
