--- a/app/_includes/shared/header.html
+++ b/app/_includes/shared/header.html
@@ -45,7 +45,7 @@
             </li><!-- /.dropdown -->
 
             <li class="dropdown">
-              <a href="/contact" class="btn btn-large btn-green">Get In Touch</a>
+              <a href="/contact" class="btn btn-large btn-green">Contact Us</a>
             </li><!-- /.dropdown -->
 
           </ul><!-- /.nav -->
