--- a/app/_includes/landing-hero.html
+++ b/app/_includes/landing-hero.html
@@ -1,16 +1,44 @@
 <!-- ============================================================= SECTION – HERO ============================================================= -->
 
 <section id="hero">
-  <div id="owl-main" class="owl-carousel owl-one-item">
+  <div id="owl-main" class="owl-carousel height-lg owl-inner-nav owl-ui-lg">
 
-    <div class="item img-bg-center">
+    <div class="item" style="background-image: url(/images/landing-hero-bg.jpg);">
       <div class="container">
         <div class="caption vertical-center text-center">
 
-          <h1 class="fadeInDown-1 light-color">Made To Last</h1>
-          <p class="fadeInDown-2 light-color">For 90 years, Cincinnati Mine Machinery Company has been the industry leader in quality and durable mining equipment.</p>
+          <h1 class="fadeInDown-1 light-color">Promotional Slide Title</h1>
+          <p class="fadeInDown-2 light-color">Here is a very short description of what the promotion is all about. I can be a seasonal announcement or something similar.</p>
           <div class="fadeInDown-3">
-            <a href="/products" class="btn btn-large">View our products</a>
+            <a href="/products" class="btn btn-large">Call to Action Button</a>
+          </div><!-- /.fadeIn -->
+
+        </div><!-- /.caption -->
+      </div><!-- /.container -->
+    </div><!-- /.item -->
+
+    <div class="item" style="background-image: url(/images/landing-hero-bg.jpg);">
+      <div class="container">
+        <div class="caption vertical-center text-center">
+
+          <h1 class="fadeInDown-1 light-color">Promotional Slide Title</h1>
+          <p class="fadeInDown-2 light-color">Here is a very short description of what the promotion is all about. I can be a seasonal announcement or something similar.</p>
+          <div class="fadeInDown-3">
+            <a href="/products" class="btn btn-large">Call to Action Button</a>
+          </div><!-- /.fadeIn -->
+
+        </div><!-- /.caption -->
+      </div><!-- /.container -->
+    </div><!-- /.item -->
+
+    <div class="item" style="background-image: url(/images/landing-hero-bg.jpg);">
+      <div class="container">
+        <div class="caption vertical-center text-center">
+
+          <h1 class="fadeInDown-1 light-color">Promotional Slide Title</h1>
+          <p class="fadeInDown-2 light-color">Here is a very short description of what the promotion is all about. I can be a seasonal announcement or something similar.</p>
+          <div class="fadeInDown-3">
+            <a href="/products" class="btn btn-large">Call to Action Button</a>
           </div><!-- /.fadeIn -->
 
         </div><!-- /.caption -->
