--- a/app/_includes/shared/scripts.html
+++ b/app/_includes/shared/scripts.html
@@ -68,6 +68,7 @@
 
 <!-- build:js({app,.tmp}) /scripts/app.js -->
 <script src="/scripts/app.js"></script>
+<script src="/js/tumblr.js"></script>
 <!-- endbuild -->
 
 
