update CTA band copy

--- a/app/_includes/shared/cta-bar.html
+++ b/app/_includes/shared/cta-bar.html
@@ -4,7 +4,7 @@
   <div class="container inner-sm">
     <div class="row">
       <div class="col-sm-11 center-block text-center">
-        <h1 class="single-block">Talk to a human. <a href="/contact" class="btn btn-large btn-green">Get in touch here</a></h1>
+        <h1 class="single-block">Have a question? <a href="/contact" class="btn btn-large btn-green">Contact Us</a></h1>
       </div><!-- /.col -->
     </div><!-- /.row -->
   </div><!-- /.container -->
